# fritter

./: .gitignore  Pipfile  README.md  pyproject.toml
examples/: sweden.py
src/fritter/: theory.py
src/fritter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fritter/lang/: __init__.py  compiler.py  grammar.py  interpreter.py  st.py
src/fritter/session/: named_scales.py  note_producers.py
src/fritter/std/: gm.py  pitch_producers.py  session.py
tests/: test_grammar.py  test_interpreter.py  test_theory.py
tests/lang/: test_compiler.py
tests/session/: test_note_producers.py
tests/std/: test_pitch_producers.py
