[project]
name = "fritter"
version = "0.1.0"
authors = [{name = "Neill Johnston"}]
description = "MIDI composer"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "mido>=1.3",
    "parsy>=2.2"
]
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
